--- a/src/csc301/ultrasound/android/res/layout/login.xml
+++ b/src/csc301/ultrasound/android/res/layout/login.xml
@@ -12,39 +12,17 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
-	    <TextView
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:textColor="@color/label_color"
-	        android:text="@string/login_username_label" />
-	
-	    <EditText
-	        android:id="@+id/nameFill"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:inputType="text"
-	    />
+	   
 	        
-	    <TextView
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:textColor="@color/label_color"
-	        android:text="@string/login_password_label" />
 	    
-	    <EditText
-	        android:id="@+id/login_password"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:inputType="textPassword"
-	    />
 	    
     	<Button
     	    android:id="@+id/login_submit" 
-    	    android:text="@string/next"
+    	    android:text="Launch Interface"
 	        android:textColor="@color/button_text_color"
-   			android:layout_width="wrap_content"
+   			android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
-   			android:layout_gravity="right"
+   			android:layout_gravity="center"
    			android:layout_marginTop="10dp"
    			android:layout_marginRight="5dp"
    			android:background="@drawable/next" />
