--- a/src/csc301/ultrasound/android/res/layout/metadata2.xml
+++ b/src/csc301/ultrasound/android/res/layout/metadata2.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-	android:layout_height="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
 	android:gravity="center"
     android:orientation="vertical"
     android:background="@drawable/background" >
@@ -11,7 +11,8 @@
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 		android:layout_gravity="center" >
-	    	    
+	    
+	    
 	    <TableRow>
 		    <ImageView 
 		        android:id="@+id/ultrasound_thumbnail2"
@@ -50,7 +51,6 @@
 		        android:id="@+id/patient_age2"
 	            android:layout_width="@dimen/metadata_textview_length"
 	            android:ems="10"
-	            android:inputType="number"
 	            android:padding="3dip" >
 
 	            <requestFocus />
@@ -72,6 +72,61 @@
 	            android:layout_width="@dimen/metadata_textview_length" />
 	    </TableRow>
 	    
+	    <TableRow>
+	        <TextView
+	            android:text="@string/metadata_is_bleeding_label"
+	        	android:textColor="@color/label_color"
+				android:layout_marginBottom="4dp"
+	            android:gravity="right"
+	            android:padding="3dip" />
+	        <EditText
+		        android:id="@+id/is_bleeding2"
+	            android:inputType="text"
+	            android:padding="3dip"
+	    		android:layout_width="@dimen/metadata_textview_length" />
+	    </TableRow>
+	    
+	     <TableRow>
+	        <TextView
+	            android:text="@string/fetal_head_diameter_label"
+	        	android:textColor="@color/label_color"
+				android:layout_marginBottom="4dp"
+	            android:gravity="right"
+	            android:padding="3dip" />
+	        <EditText
+		        android:id="@+id/fetal_head_diameter2"
+	            android:inputType="text"
+	            android:padding="3dip"
+	    		android:layout_width="@dimen/metadata_textview_length" />
+	    </TableRow>
+	    
+	      <TableRow>
+	        <TextView
+	            android:text="@string/mother_hip_diameter_label"
+	        	android:textColor="@color/label_color"
+				android:layout_marginBottom="4dp"
+	            android:gravity="right"
+	            android:padding="3dip" />
+	        <EditText
+		        android:id="@+id/mother_hip_diameter2"
+	            android:inputType="text"
+	            android:padding="3dip"
+	    		android:layout_width="@dimen/metadata_textview_length" />
+	    </TableRow>
+	    
+	    <TableRow>
+	        <TextView
+	            android:text="@string/pre_birth_label"
+	        	android:textColor="@color/label_color"
+				android:layout_marginBottom="4dp"
+	            android:gravity="right"
+	            android:padding="3dip" />
+	        <EditText
+		        android:id="@+id/pre_birth2"
+	            android:inputType="text"
+	            android:padding="3dip"
+	    		android:layout_width="@dimen/metadata_textview_length" />
+	    </TableRow>
 	    
 	    <TableRow>
 	        <TextView
@@ -91,10 +146,26 @@
 	    
 	    <TableRow>
 		    <Button
+		        android:id="@+id/finish3"
+		        android:layout_column="1"
+		        android:layout_gravity="right"
+		        android:text="@string/finish"
+	        	android:textColor="@color/button_text_color"
+		        android:paddingLeft="15dp"
+		        android:paddingRight="15dp"
+		        android:layout_height="wrap_content"
+		        android:layout_width="wrap_content"
+   				android:background="@drawable/next" />
+	    </TableRow>
+
+	    
+	    <TableRow>
+		    <Button
 		        android:id="@+id/finish2"
 		        android:layout_column="1"
 		        android:layout_gravity="right"
-		        android:text="Back"
+		        android:text="Check For Response"
+		        android:onClick = "onClick3"
 	        	android:textColor="@color/button_text_color"
 		        android:paddingLeft="15dp"
 		        android:paddingRight="15dp"
@@ -103,4 +174,4 @@
    				android:background="@drawable/next" />
 	    </TableRow>
 	</TableLayout>
-</LinearLayout>
+</ScrollView>
