--- a/src/csc301/ultrasound/android/res/layout/login.xml
+++ b/src/csc301/ultrasound/android/res/layout/login.xml
@@ -13,7 +13,23 @@
     android:orientation="vertical" >
 
 	   
-	        
+	     
+	        <TextView
+	            android:layout_width="wrap_content"
+    			android:layout_height="wrap_content"
+	            android:text="UserId"
+	        	android:textColor="@color/label_color"
+				android:layout_marginBottom="4dp"
+	            android:gravity="center"
+	            android:padding="3dip" />
+	        <EditText
+	            
+    			android:layout_height="wrap_content"
+		        android:id="@+id/user_name"
+	            android:inputType="text"
+	            android:padding="3dip"
+	    		android:layout_width="@dimen/metadata_textview_length" />
+	    
 	    
 	    
     	<Button
