--- a/src/csc301/ultrasound/android/res/layout/metadata3.xml
+++ b/src/csc301/ultrasound/android/res/layout/metadata3.xml
@@ -15,13 +15,23 @@
 	    
 	    <TableRow>
 		    <ImageView 
-		        android:id="@+id/ultrasound_thumbnail"
+		        android:id="@+id/ultrasound_thumbnail2"
 		        android:layout_column="1"
 			    android:layout_width="@dimen/thumbnail_width"
 			    android:layout_height="@dimen/thumbnail_height"
 				android:layout_gravity="center"
 				android:layout_marginBottom="4dp"
 				android:contentDescription="@string/metadata_image_preview_label" />
+	    </TableRow>
+	    
+	     <TableRow>
+		    <ImageView 
+		        android:id="@+id/fusionImg"
+		        android:layout_column="1"
+			    android:layout_width="@dimen/thumbnail_width"
+			    android:layout_height="@dimen/thumbnail_height"
+				android:layout_marginBottom="4dp"
+				android:contentDescription="Annotated Image" />
 	    </TableRow>
 	        
 	    <TableRow>
@@ -32,7 +42,7 @@
 	            android:gravity="right"
 	            android:padding="3dip" />
 	        <EditText
-		        android:id="@+id/patient_name"
+		        android:id="@+id/patient_name2"
 	            android:inputType="text"
 	            android:padding="3dip"
 	    		android:layout_width="@dimen/metadata_textview_length" />
@@ -48,7 +58,7 @@
 	            android:padding="3dip" />
 
 	        <EditText
-		        android:id="@+id/patient_age"
+		        android:id="@+id/patient_age2"
 	            android:layout_width="@dimen/metadata_textview_length"
 	            android:ems="10"
 	            android:padding="3dip" >
@@ -66,7 +76,7 @@
 	            android:gravity="right"
 	            android:padding="3dip" />
 	        <EditText
-		        android:id="@+id/patient_gestation_age"
+		        android:id="@+id/patient_gestation_age2"
 	            android:inputType="number"
 	            android:padding="3dip"
 	            android:layout_width="@dimen/metadata_textview_length" />
@@ -80,9 +90,9 @@
 	            android:gravity="right"
 	            android:padding="3dip" />
 	        <EditText
-		        android:id="@+id/is_bleeding"
+		        android:id="@+id/is_bleeding2"
+	            android:inputType="text"
 	            android:padding="3dip"
-	            android:inputType="number"
 	    		android:layout_width="@dimen/metadata_textview_length" />
 	    </TableRow>
 	    
@@ -94,10 +104,9 @@
 	            android:gravity="right"
 	            android:padding="3dip" />
 	        <EditText
-		        android:id="@+id/fetal_head_diameter"
-	            
+		        android:id="@+id/fetal_head_diameter2"
+	            android:inputType="text"
 	            android:padding="3dip"
-	            android:inputType="number"
 	    		android:layout_width="@dimen/metadata_textview_length" />
 	    </TableRow>
 	    
@@ -109,10 +118,9 @@
 	            android:gravity="right"
 	            android:padding="3dip" />
 	        <EditText
-		        android:id="@+id/mother_hip_diameter"
-	            
+		        android:id="@+id/mother_hip_diameter2"
+	            android:inputType="text"
 	            android:padding="3dip"
-	            android:inputType="number"
 	    		android:layout_width="@dimen/metadata_textview_length" />
 	    </TableRow>
 	    
@@ -124,10 +132,9 @@
 	            android:gravity="right"
 	            android:padding="3dip" />
 	        <EditText
-		        android:id="@+id/pre_birth"
-	            
+		        android:id="@+id/pre_birth2"
+	            android:inputType="text"
 	            android:padding="3dip"
-	            android:inputType="number"
 	    		android:layout_width="@dimen/metadata_textview_length" />
 	    </TableRow>
 	    
@@ -139,10 +146,9 @@
 	            android:gravity="right"
 	            android:padding="3dip" />
 	        <EditText
-		        android:id="@+id/comments"
+		        android:id="@+id/comments2"
 	            android:inputType="textMultiLine"
 	            android:padding="3dip"
-	       
 	            android:layout_width="@dimen/metadata_textview_length"
 	            android:minLines="5" />
 	    </TableRow>
@@ -150,10 +156,27 @@
 	    
 	    <TableRow>
 		    <Button
-		        android:id="@+id/finish"
+		        android:id="@+id/finish3"
 		        android:layout_column="1"
 		        android:layout_gravity="right"
 		        android:text="@string/finish"
+		        android:onClick = "onClick4"
+	        	android:textColor="@color/button_text_color"
+		        android:paddingLeft="15dp"
+		        android:paddingRight="15dp"
+		        android:layout_height="wrap_content"
+		        android:layout_width="wrap_content"
+   				android:background="@drawable/next" />
+	    </TableRow>
+
+	    
+	    <TableRow>
+		    <Button
+		        android:id="@+id/finish2"
+		        android:layout_column="1"
+		        android:layout_gravity="right"
+		        android:text="Check For Response"
+		        android:onClick = "onClick3"
 	        	android:textColor="@color/button_text_color"
 		        android:paddingLeft="15dp"
 		        android:paddingRight="15dp"
